New: FormPanel now supports combo boxes.
Fix: config[:bbar] set to 'false' now works in grids with pagination
New: you can specify :preloaded => true in a tab config in TabPanel to preload the widget in that tab along with the TabPanel itself
New: hideBusy added to Ext.StatusBar
Fix: assigning association (a Boss to a Clerk) by virtual column (like boss__name) works now

v0.3.10
BasicApp-based widgets can now introduce arbitrary layout, following the convention of defining "main-panel" and "main-toolbar" panels with layout 'fit'.

v0.3.9.1
Bug fix: (regression) appLoaded() in BasicApp gets executed again

v0.3.9
AccordionPanel tests added
TabPanel works now
AccordionPanel replaced with more intuitive TabPanel in the configuration window
Code clean-up by using "single" option to call appLoaded() on "afterlayout"
Table editor bug fix

v0.3.8
Fixing Ext's EditableItem render problem.
Filters by default enabled again in GridPanel.
GridPanel enhancement: base_params get sent along with post_data.

v0.3.7
Netzke-core version sync.
Rails 2.3.2 compatibility.

v0.3.6
Netzke-core v0.2.9 compatibility.
Cleaner handling of custom renderers in GridPanel.
New FormPanel-based PropertyEditor replaces PropertyGrid.
Xcheckbox and check-column introduced.
TODO file added.
Bug fix: in TableEditor, the grid now responses on events also after being reconfigured.
Bug fix: a couple of IE-related bugs.
Significant code clean-up.

v0.3.5
Netzke-core v0.2.8 compatibility.

v0.3.4
Quick tips added to the "tools".
Regression: the "General" configuration panel for GridPanel works again.
GridPanel: rows_per_page configuration is now read from General config panel.

v0.3.3.1
Obviously using "new" as a property name in JavaScript isn't liked by Safari. Fixed.

v0.3.3
Bug fix: application not loading the widget specified in the URL (Ext.History-related).
Some code refactoring and readability improvements.
Ext.componentCache renamed into Ext.netzke.cache.