@@ -1,16 +1,8 @@
 autotest/discover.rb
 CHANGELOG
-generators/netzke_basepack/netzke_basepack_generator.rb
-generators/netzke_basepack/USAGE
-generators/netzke_form_panel/netzke_form_panel_generator.rb
-generators/netzke_form_panel/templates/create_netzke_form_panel_fields.rb
-generators/netzke_grid_panel/netzke_grid_panel_generator.rb
-generators/netzke_grid_panel/templates/create_netzke_grid_panel_columns.rb
 init.rb
 install.rb
 javascripts/basepack.js
-lib/app/models/netzke_form_panel_field.rb
-lib/app/models/netzke_grid_panel_column.rb
 lib/app/models/netzke_hash_record.rb
 lib/app/models/netzke_layout_item.rb
 lib/netzke/accordion_panel.rb
@@ -70,7 +62,6 @@ test/app_root/db/migrate/20081223025635_create_countries.rb
 test/app_root/db/migrate/20081223025653_create_continents.rb
 test/app_root/db/migrate/20081223025732_create_cities.rb
 test/app_root/db/migrate/20090102223630_create_netzke_layouts.rb
-test/app_root/db/migrate/20090102223811_create_netzke_grid_panel_columns.rb
 test/app_root/script/console
 test/app_root/vendor/plugins/acts_as_list/init.rb
 test/app_root/vendor/plugins/acts_as_list/lib/active_record/acts/list.rb
