@@ -1,8 +1,0 @@
-class NetzkeBasepackGenerator < Rails::Generator::NamedBase
-  def manifest
-    record do |m|
-      # m.directory "lib"
-      # m.template 'README', "README"
-    end
-  end
-end
