@@ -1,6 +1,6 @@
 class NetzkeLayoutItem < NetzkeHashRecord
 
-  # Moving items
+  # Moving item
   def self.move_item(from, to)
     r = records.delete_at(from)
     records.insert(to, r)
