@@ -6,6 +6,7 @@ Fix: config[:bbar] set to 'false' now works in grids with pagination
 New: you can specify :preloaded => true in a tab config in TabPanel to preload the widget in that tab along with the TabPanel itself
 New: hideBusy added to Ext.StatusBar
 Fix: assigning association (a Boss to a Clerk) by virtual column (like boss__name) works now
+Fix: an old bug that made GridPanel misbehave after reordering the columns
 
 v0.3.10
 BasicApp-based widgets can now introduce arbitrary layout, following the convention of defining "main-panel" and "main-toolbar" panels with layout 'fit'.
